src/themes/rfkhr/sass/theme-styles.scss
/* ... */
// @TODO  RENDER CRITICAL: Consider moving into page template as it's critical to page render
body:not(#en__pagebuilder).footer-below-fold
  #engrid
  .en__component--advrow
  .page-backgroundImage::before {
  -webkit-clip-path: none;
  clip-path: none;
  height: 100%;
  top: 0;
  background-color: var(
    --background-image-background-color,
    $default-background-image-background-color
  );
}

/************************************
   * Utility: Give By Select Logos
   * Assumes items are in order of Card, PayPal, Check
   * .give-by-select
   ***********************************/
.give-by-select .en__field__element--radio {
  justify-content: space-between;
}

.give-by-select .en__field__element--radio .en__field__item {
  margin-right: 0 !important;
  max-width: calc((100% - 2rem) / 3);
}

/* Card */
.give-by-select .en__field__element--radio .en__field__item:nth-child(1) label {
  background-image: url(https://cdn.jsdelivr.net/gh/4site-interactive-studios/Ocean-Conservancy-Engaging-Networks-Template@master/themes/parent-theme/images/icon-card-black.svg);
  padding-left: 27px !important;
  background-size: 20px 16px;
  background-position-x: calc(50% - 23px);
  background-position-y: calc(50% - 1px);
}

/* Paypal */
.give-by-select .en__field__element--radio .en__field__item:nth-child(2) label {
  background-image: url(https://cdn.jsdelivr.net/gh/4site-interactive-studios/Ocean-Conservancy-Engaging-Networks-Template@master/themes/parent-theme/images/icon-paypal-black.svg);
  // background-position: left center;
  // background-repeat: no-repeat;
  padding-left: 23px !important;
  background-size: 14px 17px;
  background-position-x: calc(50% - 29px);
  background-position-y: calc(50% + 1px);
}

/* Check */
.give-by-select .en__field__element--radio .en__field__item:nth-child(3) label {
  background-image: url(https://cdn.jsdelivr.net/gh/4site-interactive-studios/Ocean-Conservancy-Engaging-Networks-Template@master/themes/parent-theme/images/icon-check-black.svg);
  // background-position: left center;
  // background-repeat: no-repeat;
  padding-left: 27px !important;
  background-size: 20px 16px;
  background-position-x: calc(50% - 27px);
  background-position-y: calc(50% - 1px);
}

.give-by-select
  .en__field__element--radio
  .en__field__item:nth-child(1)
  label.en__field__label.en__field__label--item:hover,
.give-by-select
  .en__field__element--radio
  .en__field__item:nth-child(1)
  input[type="radio"]:checked
  + label {
  background-image: url(https://cdn.jsdelivr.net/gh/4site-interactive-studios/Ocean-Conservancy-Engaging-Networks-Template@master/themes/parent-theme/images/icon-card-white.svg);
}

.give-by-select
  .en__field__element--radio
  .en__field__item:nth-child(2)
  label.en__field__label.en__field__label--item:hover,
.give-by-select
  .en__field__element--radio
  .en__field__item:nth-child(2)
  input[type="radio"]:checked
  + label {
  background-image: url(https://cdn.jsdelivr.net/gh/4site-interactive-studios/Ocean-Conservancy-Engaging-Networks-Template@master/themes/parent-theme/images/icon-paypal-white.svg);
}

.give-by-select
  .en__field__element--radio
  .en__field__item:nth-child(3)
  label.en__field__label.en__field__label--item:hover,
.give-by-select
  .en__field__element--radio
  .en__field__item:nth-child(3)
  input[type="radio"]:checked
  + label {
  background-image: url(https://cdn.jsdelivr.net/gh/4site-interactive-studios/Ocean-Conservancy-Engaging-Networks-Template@master/themes/parent-theme/images/icon-check-white.svg);
}

.highlight {
  background-color: var(
    --theme-highlight-background-color,
    $default-highlight-background-color
  );
  color: var(--theme-highlight-font-color, $default-highlight-font-color);
  padding: 0.5rem;
  font-weight: 500;
  display: inline-block;
  // margin-left: -0.5rem;
  &.big {
    font-size: 120%;
  }
}

.en__field--donationAmt {
  input[type="text"].en__field__input--other,
  input[type="number"].en__field__input--other,
  input[type="tel"].en__field__input--other {
    padding-left: 35px;
    // padding-right: 27%;
    // text-align: center;
    min-height: 40px;
  }
}

.en__field--donationAmt .en__field__item--other::before {
  display: block;
  content: "$";
  position: relative;
  height: 0;
  left: 20px;
  top: 10px;
  color: var(--theme-black);
  width: 0;
  font-weight: 400;
}

.en__field--donationAmt.en__field--radio
  .en__field__item--other:not(.en__field__item--hidden)::before {
  color: var(--theme-white);
}

.en__field--monthly_upsell_checkbox
  .en__field__input--checkbox
  + .en__field__label {
  display: inline-block !important;
}

.en__field--monthly_upsell_checkbox
  .en__field__input--checkbox
  + .en__field__label::before {
  margin-top: 0.25rem;
}

.en__field__input--checkbox + .en__field__label::before,
.en__contactDetails__rows::before {
  border-radius: 50%;
}
.en__field__input--checkbox:checked + .en__field__label::before,
.en__contactDetails__select:checked + .en__contactDetails__rows::before {
  background-color: var(--theme-black);
  box-shadow: none;
}

.en__field__input--checkbox:checked + .en__field__label::after,
.en__contactDetails__select:checked + .en__contactDetails__rows::after {
  content: "\a0\2713";
  color: var(--theme-white);
  left: -31px;
  top: 1px;
}

// Couldn't find the cause of this spacing issue https://d.pr/i/1W9vTl
.en__field--giveBySelect div div.en__field__item:last-child {
  margin-right: 0 !important;
}
/* ... */

